devops/app/services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
  # note that prometheus needs this label to scrape the metrics
    app: frontend 
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
