devops/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    # Cert-Manager annotation to use the Let's Encrypt Production issuer
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # External-DNS annotation to enable automatic DNS record creation
    external-dns.alpha.kubernetes.io/hostname: "demo.aayush0325.fun"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.aayush0325.fun
    secretName: demo-tls
  rules:
  - host: demo.aayush0325.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
